# FAT_client

./: CMakeLists.txt  CMakeUserPresets.json  RCa09260  README.md  main.cpp  main.qml  taoQuick.cmake
Qml/: main.qml
Qml/Page/: Home.qml
Qml/Pane/: ContentModel.qml  LeftPane.qml  TitlePane.qml
Src/: main.cpp
TaoQuick/TaoQuick/Qml/CusCheckBox/: CusCheckBox.qml
TaoQuick/TaoQuick/Qml/CusComboBox/: CusComboBox.qml
TaoQuick/TaoQuick/Qml/CusImage/: CusImageOverlay.qml
TaoQuick/TaoQuick/Qml/CusSpinBox/: CusSpinBox.qml
TaoQuick/TaoQuick/Qml/Pane/: ContentModel.qml
Trans/: keys.json  language_zh.json
